--- a/src/components/ComponentTwo/style.css
+++ b/src/components/ComponentTwo/style.css
@@ -1,30 +1,27 @@
 .co2-container {
-    background: url("../../assets/background 2.jpg") no-repeat;
-    background-size: cover;
-    width: 100%;
-    max-width: 100vw;
-    background-position: center;
-    display: flex;
-    flex-direction: column;
+	background: url("../../assets/background 2.jpg") no-repeat;
+	background-size: cover;
+	width: 100%;
+	max-width: 100vw;
+	background-position: center;
+	display: flex;
+	flex-direction: column;
 }
 
 .co2-content {
-    display: flex;
-    flex-direction: column;
-    max-width: 100%;
+	display: flex;
+	flex-direction: column;
+	max-width: 100%;
 }
 
 .ct-container {
-    display: flex;
+	display: flex;
 }
 
 .primeiro-h1 {
-    padding: 500px 0 0 150px
+	padding: 500px 0 0 150px;
 }
 
-.font-main {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 30vh;
+.blue {
+	color: blue;
 }
