--- a/src/components/Card/style.css
+++ b/src/components/Card/style.css
@@ -24,3 +24,15 @@
 	font-size: 16px;
 	text-align: justify;
 }
+
+@media only screen and (max-width: 930px) {
+	.img-video {
+		width: 280px;
+	}
+	.card {
+		height: 436px;
+		width: 280px;
+		cursor: pointer;
+		font-family: "Rubik", sans-serif;
+	}
+}
