--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -6,11 +6,6 @@
 	justify-content: space-between;
 }
 
-.capa-andrei {
-	background-size: cover;
-	top: 100px;
-}
-
 main {
 	width: 65%;
 	padding-right: 20px;
@@ -56,4 +51,16 @@ main h2 {
 
 .ai-center {
 	align-items: center;
+}
+
+@media only screen and (max-width: 1280px) {
+	main {
+		width: 90%;
+	}
+	.container-cards {
+		display: flex;
+		gap: 15px;
+		justify-content: center;
+		flex-wrap: wrap;
+	}
 }
