--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -7,7 +7,7 @@
 }
 
 main {
-	width: 65%;
+	width: 55%;
 	padding-right: 20px;
 	margin-top: 50px;
 }
@@ -23,6 +23,7 @@ main h2 {
 	display: flex;
 	justify-content: space-between;
 	flex-wrap: wrap;
+	min-height: 1700px;
 }
 
 .font-main {
@@ -53,7 +54,7 @@ main h2 {
 	align-items: center;
 }
 
-@media only screen and (max-width: 1280px) {
+@media only screen and (max-width: 1490px) {
 	main {
 		width: 90%;
 	}
