--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -1,5 +1,6 @@
 .container {
 	background: url("../../assets/background 3.jpg");
+	background-position: center;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -7,7 +8,7 @@
 }
 
 main {
-	width: 55%;
+	width: 65%;
 	padding-right: 20px;
 	margin-top: 50px;
 }
@@ -21,9 +22,9 @@ main h2 {
 
 .container-cards {
 	display: flex;
-	justify-content: space-between;
+	justify-content: flex-start;
 	flex-wrap: wrap;
-	min-height: 1700px;
+	gap: 10px;
 }
 
 .font-main {
@@ -60,8 +61,9 @@ main h2 {
 	}
 	.container-cards {
 		display: flex;
+
 		gap: 15px;
-		justify-content: center;
+		justify-content: flex-start;
 		flex-wrap: wrap;
 	}
 }
