--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -8,7 +8,11 @@
 }
 
 main {
-	width: 65%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	width: 80%;
 	padding-right: 20px;
 	margin-top: 50px;
 }
@@ -21,7 +25,7 @@ main h2 {
 
 .container-cards {
 	display: flex;
-	justify-content: flex-start;
+	justify-content: center;
 	flex-wrap: wrap;
 	gap: 10px;
 }
@@ -61,9 +65,8 @@ main h2 {
 
 	.container-cards {
 		display: flex;
-
+		justify-content: center;
 		gap: 15px;
-		justify-content: flex-start;
 		flex-wrap: wrap;
 	}
 }
